Fixed spacing. Nav menu reversed on small screens

--- a/style.css
+++ b/style.css
@@ -15,52 +15,64 @@ ul.topnav {
   position: fixed;
   top: 0;
   width: 100%;
+  min-width: 330px;
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
+  opacity: 0.92;
   background-color: #b8b8b8;
 }
-ul.topnav li {float: left;}
+ul.topnav li {float: right; white-space: nowrap;}
 ul.topnav li a {
   display: inline-block;
   color: white;
+  vertical-align: bottom;
   text-align: center;
-  padding: 14px 16px;
+  padding: 14px 22px;
   text-decoration: none;
-  transition: 0.4s;
-  font-family: "Noto Mono";
-  font-size: 16px;
+  transition: 0.5s;
+  font-family: 'Noto Mono', Verdana, sans-serif;;
+  font-size: 20px;
 }
-ul.topnav li a:hover {background-color: #808080}
-ul.topnav li a img {
-  display: inline-block;
-  vertical-align: text-bottom;
-}
+ul.topnav li a:hover {background-color: #808080; opacity: 1;} /*#833333 is a cool color*/
 ul.topnav li.icon {display: none;}
-/* active {background-color: #96cefd} */
-
-@media screen and (max-width:720px) {
+/* .active {background-color: #96cefd} */
+#nameAndLogo {
+  float: left;
+}
+#nameAndLogo a img {
+  vertical-align: middle;
+  padding: 0;
+  margin: 0;
+}
+#nameAndLogo a:hover{
+    background-color: #833333;
+}
+@media screen and (max-width:1200px) {
   ul.topnav li:not(:first-child) {display: none;}
   ul.topnav li.icon {
     float: right;
     display: inline-block;
   }
 }
-
-@media screen and (max-width:720px) {
+@media screen and (max-width:1200px) {
   ul.topnav.responsive {position: relative;}
   ul.topnav.responsive li.icon {
     position: absolute;
+    width: initial;
     right: 0;
     top: 0;
   }
   ul.topnav.responsive li {
-    float: none;
-    display: inline;
+    float: left;
+    padding: 0;
+    width: 100%;
+    display: table-row;
   }
   ul.topnav.responsive li a {
     display: block;
+    width: 100%;
     text-align: left;
   }
 }
@@ -71,8 +83,6 @@ div.content {
   padding-top: 60px;
   background-color: white;
   width: 100%;
-  word-break: normal;
-  white-space: normal;
 }
 div.content section {
   margin-top: 20px;
@@ -87,7 +97,7 @@ div.content section {
 div.content p {
   color: #808080;
   font-size: 16px;
-  font-family: 'Noto Mono', Arial, sans-serif;
+  font-family: 'Noto Mono', Verdana, sans-serif;
   text-decoration: none;
   text-align: center;
   white-space: normal;
@@ -96,7 +106,6 @@ div.content h1 {
   color: #000000;
   font-size: 36px;
   font-family: 'Noto Sans UI', Arial, sans-serif;
-  line-height: 0.8px;
   text-decoration: none;
   text-align: center;
 }
@@ -104,7 +113,6 @@ div.content h2 {
   color: #96cefd;
   font-size: 22px;
   font-family: 'Noto Sans UI', Arial, sans-serif;
-  line-height: 0.8px;
   text-decoration: none;
   text-align: center;
 }
